syntax = "proto3";

package library;

service BookService {
    rpc CreateBook (Book) returns (BookResponse);
    rpc GetBook (BookRequest) returns (Book);
    rpc UpdateBook (Book) returns (BookResponse);
    rpc DeleteBook (BookRequest) returns (BookResponse);
}

message Book {
    string id = 1;
    string title = 2;
    string author = 3;
}

message BookRequest {
    string id = 1;
}

message BookResponse {
    string message = 1;
}